jump to rules styling + table of contents fix
When jumping to a heading it is styled red, when loading the page the
table of contents size is offset to stop the page jumping too much. not
perfect, but works well enough.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ h1, h2, h3, h4, h5, h6{
     padding:10px;
 }
 
+.selected_heading{
+    color:#C62437;
+}
+
 #footer{
     margin-top:60px;
     margin-bottom:60px;
